--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spam",
+  "name": "spamjs",
   "version": "1.1.0",
   "description": "A D3 library to create maps with Canvas",
   "keywords": [
