--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "type": "git",
     "url": "https://github.com/newsappsio/spam.git"
   },
+  "license": "MIT",
   "dependencies": {
     "d3": "4.8.0",
     "rbush": "2.0.1",
     "topojson": "1.6.26"
-  },
-  "devDependencies": {
-    "d3": "4.8.0"
   }
 }
