--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "url": "https://github.com/newsappsio/spam.git"
   },
   "dependencies": {
-    "d3": "4",
+    "d3": "5",
     "rbush": "3"
   },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
     "rollup": "^1.27.14",
     "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-terser": "^5.1.3"
