--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "url": "https://github.com/newsappsio/spam.git"
   },
   "dependencies": {
-    "d3": "5",
+    "d3-ease": "^1.0.6",
+    "d3-geo": "^1.11.9",
+    "d3-interpolate": "^1.4.0",
+    "d3-selection": "^1.4.1",
+    "d3-transition": "^1.3.2",
     "rbush": "3"
   },
   "devDependencies": {
