--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "url": "https://github.com/newsappsio/spam.git"
   },
   "dependencies": {
-    "d3-ease": "^1.0.6",
-    "d3-geo": "^1.11.9",
-    "d3-interpolate": "^1.4.0",
-    "d3-selection": "^1.4.1",
-    "d3-transition": "^1.3.2",
+    "d3-ease": "1",
+    "d3-geo": "1",
+    "d3-interpolate": "1",
+    "d3-selection": "1",
+    "d3-transition": "1",
     "rbush": "3"
   },
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "rollup": "^1.27.14",
-    "rollup-plugin-filesize": "^6.2.1",
-    "rollup-plugin-terser": "^5.1.3"
+    "@rollup/plugin-buble": "0",
+    "@rollup/plugin-node-resolve": "6",
+    "rollup": "1",
+    "rollup-plugin-filesize": "6",
+    "rollup-plugin-terser": "5"
   }
 }
